--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -6,15 +6,20 @@
 
 
 <div class="jumbotron">
-     <a href="https://github.com/hipyliv/web"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a> 
   <div class="container">
       <div class="row">
           <div class="col-sm-10 col-sm-offset-1">
+              <div class="col-sm-5">
                   <h1>HiPy</h1>
-                  <h2>Let's build a web app!</h2>
-                  <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <div class="social-links">
+                      <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-3x sm-icon" aria-hidden="true"></i></a>
+                      <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-3x sm-icon" aria-hidden="true"></i></a>
+                      <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-3x sm-icon" aria-hidden="true"></i></a>
+                  </div>
+              </div>
+              <div class="col-sm-7">
+                  <h2>Next Meet: <strong>Wed 25 Aug, Central Teaching Labs, G-flex, 3pm</h2>
+              </div>
           </div>
       </div>
   </div>
@@ -24,31 +29,19 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>Two birds, one stone ...</h2>
-               <ol>
-                   <li>We need a website for our <strong>resources</strong> and to <strong>promote</strong> HiPy</li>
-                   <li>You want to learn how to use Python to build <strong>web apps</strong></li>
-               </ol>
-               <p><strong>So, let's get started!</strong></p>
-               <p>Head on over to the <a href="https://github.com/hipyliv">HiPy GitHub</a> now and fork the 'web' repo.</p>
+               <h2>Coming Up...</h2>
+               <p>We're changing things for the next #HiPyLiv meet. In response to the feedback we've received from the hive we've designed a series of "micro-challenges" that will suit all levels of ability - from absolute beginner to seasoned Python veteran.<p>
+               <p>A few examples of the challenges include</p>
+               <ul>
+                   <li>Roman Numeral Generator</li>
+                   <li>Palendrome Checker</li>
+                   <li>Data Chunker</li>
+               </ul>
+               <p>Keep an eye on our GitHub repo for resources. We'll be adding more closer to the meet</p>
+              <button type="button" class="btn btn-warning">Click for Resources</button> 
            </div>
            <div class="col-md-6">
-               <h2>What will I learn?</h2>
-               <ul>
-                   <li>Python (Obviously)</li>
-                   <li><a href="https://www.djangoproject.com/">Django Web Framework</a></li>
-                   <li>HTML & CSS</li>
-                   <li>A pinch of javascript</li>
-                   <li>Git & GitHub</li>
-               </ul>
-               <h2>Resources</h2>
-               <ul>
-                   <li><a href="https://mikesdjangotutorials.co.uk/" target="_blank">Mike Hibbert's Learn Django Like A Pro</a></li>
-                   <li><a href="http://www.tangowithdjango.com/" target="_blank">Tango With Django (Awesome)</a></li>
-                   <li><a href="https://hellowebapp.com/" target="_blank">Tracy Osborn's Hello Web App books (perfection)</a></li>
-               </ul>
-           </div>
-           </div>
+               <a class="twitter-timeline" data-height="650" data-link-color="#FAB81E" href="https://twitter.com/hipyliv">Tweets by hipyliv</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
        </div>
    </div>
 </div>
