--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -1,1 +1,24 @@
+/* HEADER */
 
+.jumbotron {
+    background-color: orange;
+    color: white;
+}
+
+.jumbotron a {
+    color: white;
+}
+
+.jumbotron a:hover {
+    color: yellow;
+}
+
+.jumbotron h1 {
+    font-size: 8em;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+}
+
+.social-links {
+    margin-left: 10px;
+    }
