--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -38,7 +38,7 @@
                    <li>Data Chunker</li>
                </ul>
                <p>Keep an eye on our GitHub repo for resources. We'll be adding more closer to the meet</p>
-              <button type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</button> 
+               <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
            </div>
            <div class="col-md-6">
                <a class="twitter-timeline" data-height="650" data-link-color="#FAB81E" href="https://twitter.com/hipyliv">Tweets by hipyliv</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
