index.html tweak

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -30,7 +30,7 @@
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
                <h2>Coming Up...</h2>
-               <p>We're changing things for the next #HiPyLiv meet. In response to the feedback we've received from the hive we've designed a series of "micro-challenges" that will suit all levels of ability - from absolute beginner to seasoned Python veteran.<p>
+               <p>We're changing things for the next <a href="https://twitter.com/hashtag/HiPyLiv" target="_blank">#HiPyLiv</a> meet. In response to the feedback we've received from the hive we've designed a series of "micro-challenges" that will suit all levels of ability - from absolute beginner to seasoned Python veteran.<p>
                <p>A few examples of the challenges include</p>
                <ul>
                    <li>Roman Numeral Generator</li>
