--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -29,16 +29,21 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>Coming Up...</h2>
-               <p>We're changing things for the next <a href="https://twitter.com/hashtag/HiPyLiv" target="_blank">#HiPyLiv</a> meet. In response to the feedback we've received from the hive we've designed a series of "micro-challenges" that will suit all levels of ability - from absolute beginner to seasoned Python veteran.<p>
-               <p>A few examples of the challenges include</p>
-               <ul>
-                   <li>Roman Numeral Generator</li>
-                   <li>Palendrome Checker</li>
-                   <li>Data Chunker</li>
-               </ul>
-               <p>Keep an eye on our GitHub repo for resources. We'll be adding more closer to the meet</p>
+               <h2>Today's Meet</h2>
                <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
+               <p>
+                 <ol>
+                     <li>Work on the micro-challenges with a partner (or even in threes</li>
+                     <li>Start with the "Fibonnaci" Challenge</li>
+                 </ol>
+               <p>
+               <h2>Feedback</h2>
+               <a type="button" class="btn btn-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSfZnl22ja33Q4pRyiovBmYRLGr0BziHg417FSutKKmQM3B2ig/viewform?c=0&w=1">Give Feedback</a>
+               <a type="button" class="btn btn-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSfZnl22ja33Q4pRyiovBmYRLGr0BziHg417FSutKKmQM3B2ig/viewanalytics?usp=form_confirm">Read Feedback</a>
+               <h2>Mailing List</h2>
+               <p>To receive news of upcoming events then please click the button below.</p>
+               <a type="button" class="btn btn-warning" href="http://facebook.us13.list-manage.com/subscribe?u=4e0bdf2a98cdf2f606d797196&id=3465e23e7b">Sign Up</a>
+
            </div>
            <div class="col-md-6">
                <a class="twitter-timeline" data-height="650" data-link-color="#FAB81E" href="https://twitter.com/hipyliv">Tweets by hipyliv</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
