--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -18,7 +18,7 @@
                   </div>
               </div>
               <div class="col-sm-7">
-                  <h2>Next Meet: <strong>Wed 24 Aug, Central Teaching Labs, G-flex, 3pm</h2>
+                  <h2>Next Hive: <strong>TODAY! Wed 24 Aug, Central Teaching Labs, G-flex, 3pm</h2>
               </div>
           </div>
       </div>
@@ -29,7 +29,7 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>Today's Meet</h2>
+               <h2>Today's Hive</h2>
                <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
                <p>
                  <ol>
