update for hipy 04

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -18,7 +18,7 @@
                   </div>
               </div>
               <div class="col-sm-7">
-                  <h2>Next Hive: <strong>TODAY! Wed 24 Aug, Central Teaching Labs, G-flex, 3pm</h2>
+                  <h2>Next Hive: <strong>Wed 7 Sept, CTL-6 (first floor), from 3pm</strong></h2>
               </div>
           </div>
       </div>
@@ -29,14 +29,12 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>Today's Hive</h2>
+               <h2>HiPy #04</h2>
+               <p>This week, while it's quiet, we'll be continuing with our "micro-challenges" which seemed to go down well last time. Have fun working through them in pairs or groups. If you have any suggestions for future cchallenges then let us know.</p>
+               <p>This will be the last HiPy before we take a short break to take stock and revamp ourselves a bit. Thanks to all of you who have attended our meets so far and for making our initiative a success!</p>
+               <p>HiPy will return in early October with a fresh lick of paint but with the same objective of forming an open and welcoming community anyone who wants to learn Python.</p>
+               <p>
                <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
-               <p>
-                 <ol>
-                     <li>Work on the micro-challenges with a partner (or even in threes</li>
-                     <li>Start with the "Fibonnaci" Challenge</li>
-                 </ol>
-               <p>
                <h2>Feedback</h2>
                <a type="button" class="btn btn-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSfZnl22ja33Q4pRyiovBmYRLGr0BziHg417FSutKKmQM3B2ig/viewform?c=0&w=1">Give Feedback</a>
                <a type="button" class="btn btn-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSfZnl22ja33Q4pRyiovBmYRLGr0BziHg417FSutKKmQM3B2ig/viewanalytics?usp=form_confirm">Read Feedback</a>
