--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -18,7 +18,7 @@
                   </div>
               </div>
               <div class="col-sm-7">
-                  <h2>Next Hive: <strong>Wed 7 Sept, CTL-6 (first floor), from 3pm</strong></h2>
+                  <h2>Next Hive: <strong>Wed 5 Oct, CTL-GFlex (first floor),4 - 7 pm</strong></h2>
               </div>
           </div>
       </div>
@@ -29,11 +29,10 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>HiPy #04</h2>
-               <p>This week, while it's quiet, we'll be continuing with our "micro-challenges" which seemed to go down well last time. Have fun working through them in pairs or groups. If you have any suggestions for future cchallenges then let us know.</p>
-               <p>This will be the last HiPy before we take a short break to take stock and revamp ourselves a bit. Thanks to all of you who have attended our meets so far and for making our initiative a success!</p>
-               <p>HiPy will return in early October with a fresh lick of paint but with the same objective of forming an open and welcoming community anyone who wants to learn Python.</p>
+               <h2>HiPy #05</h2>
+               <p>We will be relaunching HiPy on 5 Oct 2016. Keep an eye on our website/twitter/facebook</p>
                <p>
+               <!--
                <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
                <h2>Feedback</h2>
                <a type="button" class="btn btn-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSfZnl22ja33Q4pRyiovBmYRLGr0BziHg417FSutKKmQM3B2ig/viewform?c=0&w=1">Give Feedback</a>
@@ -41,6 +40,7 @@
                <h2>Mailing List</h2>
                <p>To receive news of upcoming events then please click the button below.</p>
                <a type="button" class="btn btn-warning" href="http://facebook.us13.list-manage.com/subscribe?u=4e0bdf2a98cdf2f606d797196&id=3465e23e7b">Sign Up</a>
+               -->
 
            </div>
            <div class="col-md-6">
