index.html updated for 5 Oct event

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -18,7 +18,9 @@
                   </div>
               </div>
               <div class="col-sm-7">
-                  <h2>Next Hive: <strong>Wed 5 Oct, CTL-GFlex (first floor),4 - 7 pm</strong></h2>
+                  </br>
+                  <p>Next Hive:</p>
+                  <h2><strong>Wed 5 Oct, CTL-GFlex, 4 - 7 pm</strong></h2>
               </div>
           </div>
       </div>
@@ -29,8 +31,13 @@
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
            <div class="col-md-6">
-               <h2>HiPy #05</h2>
-               <p>We will be relaunching HiPy on 5 Oct 2016. Keep an eye on our website/twitter/facebook</p>
+               <h2>Hello Python!</h2>
+               <h3>Wed 5 Oct, CTL G-Flex, 4 - 7 pm</h3>
+               <p>Get ready for our first Hive of the new academic year! HiPy invites all new students (undergrad and postgrad) to join us for a nice easy intro to Python.</p>
+               <p>If you know that you want to learn Python, but don't know where to start then this is for you. This event will focus on the absolute basics required for you to get tinkering with Python.</p>
+               <p>For HiPy veterans and other Pythonistas, we'll be running groups in parallel so that you can collaboratively build your knowledge and get stuck into juicier problems.</p>
+               <p>Come all. Learn Python</p>
+               <img style="width: 100%;" src="{% static 'img/group.jpg' %}"/>
                <p>
                <!--
                <a type="button" class="btn btn-warning" href="https://github.com/hipyliv/micro-challenge">Click for Micro Challenges</a>
@@ -46,6 +53,56 @@
            <div class="col-md-6">
                <a class="twitter-timeline" data-height="650" data-link-color="#FAB81E" href="https://twitter.com/hipyliv">Tweets by hipyliv</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
        </div>
+   </div>
+   </br>
+
+   <div class="col-md-10 col-md-offset-1">
+        <div style="background-color: orange; margin: 15px; padding: 10%;">
+            <p style="color:white; font-size: 3em" class="quote"><i>"Build an open, welcoming community for scientists and engineers who want to learn Python"</i></p>
+                <p style="text-align: right; font-size: 0.6 em; color:white;">HiPy MISSION STATEMENT</p>
+       </div>
+   </div>
+   <div class="col-md-10 col-md-offset-1">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+        <form action="//facebook.us13.list-manage.com/subscribe/post?u=4e0bdf2a98cdf2f606d797196&amp;id=3465e23e7b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+            <h2>Subscribe to our mailing list</h2>
+        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+        <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+        </label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+        </div>
+        <div class="mc-field-group">
+            <label for="mce-FNAME">First Name </label>
+            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+        </div>
+        <div class="mc-field-group">
+            <label for="mce-LNAME">Last Name </label>
+            <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+        </div>
+        <div class="mc-field-group">
+            <label for="mce-MMERGE3">Department </label>
+            <input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3">
+        </div>
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4e0bdf2a98cdf2f606d797196_3465e23e7b" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+        </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
    </div>
 </div>
 
